--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,19 @@
         <artifactId>fastjson</artifactId>
         <version>1.2.45</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.5</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.16.18</version>
+      <scope>provided</scope>
+    </dependency>
     
     
   </dependencies>
